Fixed image overlap issue

--- a/css/app2.css
+++ b/css/app2.css
@@ -99,7 +99,7 @@ h2 {
 /* PAGE CONTENT */
 
 .odd {
-    background-color: #dddce4;
+    background-color: #ebeaf2;
 }
 
 .card {
